Fix navbar collapse and drop down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,4 +532,8 @@ footer .footnote .highlight {
     .card-img-top {
         height: 275px;
     }
+
+    .navbar-nav {
+        float: right;
+    }
 }
